# hostveil

./: .dockerignore  .gitignore  .golangci.yaml  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ko.md  README.md  RELEASE_NOTES.md  SECURITY.md  compose.dev.yml  docker-compose.lab.yml  docker-compose.lab.yml.bak  go.mod  go.sum  release-please-config.json  skills-lock.json
.githooks/: commit-msg  pre-push
.specify/: feature.json
demo/: README.md  Vagrantfile  provision.sh  run.sh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  reset.sh  (+1 more)
proto/: README.md  demo.py  pyproject.toml  requirements.txt
proto/hostveil/: __init__.py  cli.py  fixes.py  formatter.py  i18n.py  models.py  parser.py  scanner.py  scoring.py
proto/hostveil/rules/: __init__.py  exposure.py  permissions.py  sensitive.py  updates.py
proto/tests/: test_fixes_guided.py  test_fixes_safe.py  test_formatter.py  test_parser.py  test_rules_exposure.py  test_rules_permissions.py  test_rules_sensitive.py  test_rules_updates.py  test_scoring.py
proto/tests/fixtures/: guided-fix.yml  report-scan.yml  safe-fix.yml
proto/tests/fixtures/parser/: docker-compose.override.yml  docker-compose.yml
proto/tests/fixtures/rules/: exposure-risk.yml  permissions-risk.yml  update-risk.yml
proto/tests/fixtures/rules/sensitive-risk/: .env  docker-compose.yml
src/: Cargo.toml
src/locales/: en.yml  ko.yml
src/packaging/: hostveil-package-wrapper-deb.sh  hostveil-package-wrapper-rpm.sh
src/src/: debug_md_test.rs  history.rs  lib.rs  main.rs  scoring.rs  settings.rs
src/src/adapters/: command.rs  docker_bench.rs  dockle.rs  gitleaks.rs  lynis.rs  mod.rs  trivy.rs
src/src/app/: config.rs  mod.rs  scan.rs  setup.rs
src/src/compose/: mod.rs  model.rs  parser.rs
src/src/discovery/: docker.rs  mod.rs
src/src/domain/: mod.rs
src/src/export/: mod.rs
src/src/fix/: adapter.rs  host.rs  mod.rs
src/src/host/: defensive.rs  docker.rs  filesystem.rs  fim.rs  firewall.rs  kernel.rs  mac.rs  mod.rs  ssh.rs  updates.rs
src/src/i18n/: mod.rs
src/src/rules/: exposure.rs  mod.rs  network.rs  permissions.rs  runtime.rs  sensitive.rs  service_aware.rs  updates.rs
src/src/tui/: component.rs  fix_review.rs  mod.rs  theme.rs
src/src/web/: index.html  mod.rs  server.rs  state.rs
src/src/web/api/: detail.rs  findings.rs  fix.rs  history.rs  mod.rs  overview.rs  scan.rs  settings.rs
src/src/web/pages/: findings.rs  fix.rs  history.rs  mod.rs  overview.rs
src/tests/fixtures/adapters/: dockle-image-report.json  gitleaks-dir-report.json  trivy-image-report.json
src/tests/fixtures/rules/: hardened-stack.yml  network-host-mode.yml  network-isolation-baseline.yml  network-isolation-vulnerable.yml
src/tests/fixtures/rules/mixed-stack/: docker-compose.yml
src/tests/fixtures/services/authentik/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/borg/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/caddy/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/duplicati/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/gitea/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/gitlab/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/grafana/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/homeassistant/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/immich/: baseline.yml  immich.env  vulnerable.yml
src/tests/fixtures/services/jellyfin/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/kopia/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/mysql/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/nextcloud/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/npm/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/paperless/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/pihole/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/portainer/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/postgres/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/redis/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/restic/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/traefik/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/uptime-kuma/: baseline.yml  vulnerable.yml
src/tests/fixtures/services/vaultwarden/: baseline.yml  vulnerable.yml
(+615 files in other folders)
