[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hostveil"
version = "0.1.0.dev0"
description = "Lightweight security dashboard for self-hosted Docker Compose environments"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
hostveil = "hostveil.demo:main"
