[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostveil"
version = "0.1.0"
description = "Prototype CLI for Docker Compose security audits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=14.3,<15",
  "ruamel.yaml>=0.18,<0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
hostveil = "hostveil.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
