[package]
name = "hostveil"
version = "0.5.0"
edition = "2024"
description = "Rust product implementation for hostveil"
license = "GPL-3.0-only"
publish = false
readme = "../README.md"

[dependencies]
crossterm = "0.29"
dialoguer = "0.12"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
