[package]
name = "hostveil"
version = "0.21.1"
edition = "2024"
description = "Rust product implementation for hostveil"
license = "GPL-3.0-only"
publish = false
readme = "../README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
dialoguer = "0.12"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
rust-i18n = "3"
rustix = { version = "0.38", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[package.metadata.deb]
maintainer = "Gyuwon Seol <seolcu0112@proton.me>"
copyright = "2026, Gyuwon Seol"
license-file = ["../LICENSE", "4"]
extended-description = """\
Hostveil is a lightweight security dashboard for Linux self-hosted environments.
"""
depends = "$auto"
revision = "1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/hostveil", "usr/libexec/hostveil/hostveil", "755"],
    ["packaging/hostveil-package-wrapper-deb.sh", "usr/bin/hostveil", "755"],
    ["../README.md", "usr/share/doc/hostveil/README.md", "644"],
    ["../LICENSE", "usr/share/doc/hostveil/LICENSE", "644"],
]

[package.metadata.generate-rpm]
release = "1"
assets = [
    { source = "target/release/hostveil", dest = "/usr/libexec/hostveil/hostveil", mode = "755" },
    { source = "packaging/hostveil-package-wrapper-rpm.sh", dest = "/usr/bin/hostveil", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/hostveil/README.md", mode = "644", doc = true },
    { source = "../LICENSE", dest = "/usr/share/doc/hostveil/LICENSE", mode = "644", doc = true },
]
